# ResiDual-CLAP

./: .gitignore  README.md  changes-from-original-clap.txt  changes-from-original.txt  context.txt  cose-da-fare-DLAI.txt  datas.yaml  htsat_pipeline.md  intresting-datasets-to-test.txt  labeling.yaml  main.py  problemi-da-riportare.txt  pyproject.toml  text.txt
report/: compile.err.out  compile.sh  dlai2025.sty  instructions.txt  main.aux  main.bbl  main.blg  main.tex  my_declarations.tex  out.txt  references.bib
results/: hp_tuning_ESC50.json  hp_tuning_VocalSound.json  kfold_ESC50.json  kfold_IRMAS.json  kfold_TinySOL.json  kfold_VocalSound.json  kfold_all_results.json
src/: 01_save_probe_results.ipynb  02_analysis_visualization.ipynb  CLAPWrapper.py  ESC50_id_df.csv  Untitled-1.ipynb  __init__.py  _old_residual_analysis_pre.ipynb  attention_from_datasets.ipynb  empty.ipynb  empty.py  head_analysis_complete.csv  head_analysis_summary.csv  heads_analysis.ipynb  htsat_analysis_report.txt  htsat_analysis_summary_by_layer.csv  htsat_cluster_assignments.csv  htsat_head_analysis_complete.csv  htsat_statistical_tests.csv  htsat_top_performers.csv  id_df.csv  kfold_validation.ipynb  kfold_validation.py  notebook_01_kfold.ipynb  notebook_02_bayesian_multidataset.ipynb  notebook_02_hp_tuning.ipynb  notebook_1_kfold.ipynb  pc_label_alignment.ipynb  residual_analysis post.ipynb  residual_analysis.ipynb  residual_analysis_pre.ipynb  sanity-check-pca.ipynb  table1_layer_summary.tex  table2_statistical_tests.tex  table3_top_performers.tex  test-2.ipynb  test-3.ipynb  test.ipynb
src/models/: clap.py  (+10 more)
(+28 files in other folders)
